--- a/index.html
+++ b/index.html
@@ -3,11 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Портфолио Перевалова А.С. на Яндекс.Практикуме">
+  <meta name="keywords" content="HTML5, CSS, JS">
+  <meta name="author" content="Антон Перевалов">
+
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
+    <header class="header">
+        <div class="flex-column">
+          <img src="..\images\logo_place_header.svg" alt="logo"class="logo logo_place_header">
+          <h1 class="header__title">Научиться учиться</h1>
+          <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &#8594</a></p>
+        </div>
+        <div class="flex_column">
+          <div class="header__main-illustration">фdsfgdsgsdg</div>
+          <div class="header__square-pic"></div>
+        </div>
+    </header>
+    <main>
+      <section class="description">
 
+      </section>
+      <section class="digits">
+
+      </section>
+      <section class="feynman">
+
+      </section>
+      <section class="kaufman">
+
+      </section>
+    </main>
+    <footer>
+
+    </footer>
   </div>
-</body>
+  </body>
 </html>
+
+
