--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="page">
     <header class="header">
         <div class="flex-column">
-          <img src="..\images\logo_place_header.svg" alt="logo"class="logo logo_place_header">
+          <img src=".\images\logo_place_header.svg" alt="logo"class="logo logo_place_header">
           <h1 class="header__title">Научиться учиться</h1>
           <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &#8594</a></p>
         </div>
