--- a/index.html
+++ b/index.html
@@ -1,35 +1,74 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Портфолио Перевалова А.С. на Яндекс.Практикуме">
   <meta name="keywords" content="HTML5, CSS, JS">
   <meta name="author" content="Антон Перевалов">
-
+  <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
+
 <body>
   <div class="page">
     <header class="header">
-        <div class="flex-column">
-          <!-- <img src=".\images\logo_place_header.svg" alt="logo"class="logo logo_place_header">
-          как лучше всетаки свтавлять картинку? через фон или как img? и когда как лучше?-->
-          <div class="logo logo_place_header"></div>
-          <h1 class="header__title">Научиться учиться</h1>
-          <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &#8594</a></p>
-        </div>
-        <div class="flex_column">
-          <div class="header__main-illustration"></div>
-          <div class="header__square-pic"></div>
-        </div>
+      <div class="flex-column">
+        <!-- <img src=".\images\logo_place_header.svg" alt="logo"class="logo logo_place_header"> как лучше все-таки вставлять картинку? через фон или как img? и когда как лучше?-->
+        <div class="logo logo_place_header"></div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
+          жизни? <a href="#" class="header__link">Узнать &#8594</a></p>
+      </div>
+      <div class="flex_column">
+        <div class="header__main-illustration"></div>
+        <div class="header__square-pic"></div>
+      </div>
     </header>
     <main>
       <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief">
+            <h5>Главные проблемы<br>в обучении</h5>
+          </div>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше
+              сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит
+              пользы.</p>
 
+            <p class="two-columns__paragraph"><span class="two-columns__span">Вывод:</span> учиться тоже нужно уметь, но
+              почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+              сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
       </section>
       <section class="digits">
+        <h1 class="section-title">Цифры и факты</h1>
+        <h2 class="section-subtitle">Про учёбу и мозг</h2>
+        <div class="table">
+          <div class="table__cell">86 миллиардов
+            Число нейронов в мозге человека</div>
+          <div class="table__cell">2.1 миллиарда
+            Число нуждающихся в повышении квалификации
+            Всемирный Банк, 2017</div>
+          <div class="table__cell">1000 терабайт
+            Объём памяти человека</div>
+          <div class="table__cell">500 триллионов
+            Число ответственных за обучение нервных синапсов у взрослого человека</div>
+          <div class="table__cell">420 миллионов
+            Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+            Всемирный Банк, 2017</div>
+          <div class="table__cell">17–20 лет
+            Пик обучаемости</div>
+          <div class="table__cell">1885 год
+            Открытие кривой забывания</div>
+          <div class="table__cell">1889 год
+            Открытие условного рефлекса</div>
+        </div>
 
       </section>
       <section class="feynman">
@@ -43,7 +82,6 @@
 
     </footer>
   </div>
-  </body>
+</body>
+
 </html>
-
-
