--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <header class="header">
       <div class="flex-column">
         <!-- <img src=".\images\logo_place_header.svg" alt="logo"class="logo logo_place_header"> как лучше все-таки вставлять картинку? через фон или как img? и когда как лучше?-->
-        <div class="logo logo_place_header"></div>
+        <div class="logo logo__place_header"></div>
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
           жизни? <a href="#" class="header__link">Узнать &#8594</a></p>
       </div>
-      <div class="flex_column">
+      <div class="flex-column">
         <div class="header__main-illustration"></div>
         <div class="header__square-pic"></div>
       </div>
     </header>
-    <main>
+    <!-- <main>
       <section class="description">
         <div class="two-columns">
           <div class="two-columns__brief">
@@ -51,7 +51,7 @@
         <h2 class="section__subtitle">Про учёбу и мозг</h2>
         <div class="table">
           <div class="table__row">
-            <div class="table__cell table__cell_theme_white-side">
+            <div class="table__cell table__cell_white">
               <h3 class="table__heading">86 миллиардов</h3>
               <h4 class="table__text">Число нейронов в мозге человека</h4>
             </div>
@@ -98,7 +98,7 @@
       <section class="kaufman">
 
       </section>
-    </main>
+    </main> -->
     <footer>
 
     </footer>
