--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="logo logo__place_header"></div>
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-          жизни? <a href="#" class="header__link link">Узнать &#8594</a></p>
+          жизни? <a href="#" class="header__link">Узнать &#8594</a></p>
       </div>
       <div class="flex-column">
         <div class="header__main-illustration"></div>
@@ -97,7 +97,7 @@
       <section class="feynman">
         <h1 class="feynman__title">Метод <br>Феймана</h1>
         <h2 class="feynman__subtitle">Выучить и не забыть</h2>
-        <a href="#" class="feynman__link link">Подробнее &#8594</a>
+        <a href="#" class="feynman__link">Подробнее &#8594</a>
         <img alt="Фейнман" src="./images/feynman.png" class="feynman__image">
       </section>
       <section class="kaufman">
@@ -160,19 +160,19 @@
         <div class="footer__column_content_info">
           <p class="footer__column-heading">О практикуме</p>
           <div class="footer__column-links flex_column">
-            <a href="#" class="footer__column-link link">Главная</a>
-            <a href="#" class="footer__column-link link">Концепция</a>
-            <a href="#" class="footer__column-link link">Наставники</a>
+            <a href="#" class="footer__column-link ">Главная</a>
+            <a href="#" class="footer__column-link ">Концепция</a>
+            <a href="#" class="footer__column-link ">Наставники</a>
           </div>
         </div>
         <div class="footer__column_content_social">
           <p class="footer__column-heading">Соцсети</p>
           <div class="footer__column-links flex_column">
-            <a href="#" class="footer__column-link link"><img src=".\images\youtube-icon.svg" alt="YouTube"
-                class="social-icon"> YouTube</a>
-            <a href="#" class="footer__column-link link"><img src=".\images\vk_color_white.svg" alt="YouTube"
+            <a href="#" class="footer__column-link"><img src=".\images\youtube-icon.svg" alt="YouTube"
+                class="social-icon">YouTube</a>
+            <a href="#" class="footer__column-link"><img src=".\images\vk_color_white.svg" alt="YouTube"
                 class="social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link link"><img src=".\images\tiktok-icon.svg" alt="YouTube"
+            <a href="#" class="footer__column-link"><img src=".\images\tiktok-icon.svg" alt="YouTube"
                 class="social-icon">TikTok</a>
           </div>
         </div>
