--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
               <p class="table__text">Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
-          <img alt="Треугольник" src=".\images\kaufman-triangle.svg" class="kaufman__image">
+        </div>
+        <img alt="Треугольник" src=".\images\kaufman-triangle.svg" class="kaufman__image">
       </section>
     </main>
     <footer class="footer">
@@ -176,8 +177,9 @@
           </div>
         </div>
       </div>
+    </footer>
   </div>
-  </footer>
+
 </body>
 
 </html>
