--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
       <section class="description">
         <div class="two-columns">
-          <h5 class="two-columns__brief">Главные проблемы<br>в обучении</h5>
+          <h5 class="two-columns__brief">Главные проблемы в обучении</h5>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
               материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше
@@ -168,12 +168,12 @@
         <div class="footer__column--content_social">
           <p class="footer__column-heading">Соцсети</p>
           <div class="footer__column--links flex_column">
-            <a href="#" class="footer__column-link"><img src=".\images\youtube-icon.svg" alt="YouTube"
+            <a href="#" class="footer__column-link"><img src=".\images\youtube-icon.svg" alt="Видеохостинг YouTube"
                 class="social-icon">YouTube</a>
-            <a href="#" class="footer__column-link"><img src=".\images\vk_color_white.svg" alt="YouTube"
-                class="social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src=".\images\tiktok-icon.svg" alt="YouTube"
-                class="social-icon">TikTok</a>
+            <a href="#" class="footer__column-link"><img src=".\images\vk_color_white.svg"
+                alt="Cоциальная сеть ВКонтакте" class="social-icon">ВКонтакте</a>
+            <a href="#" class="footer__column-link"><img src=".\images\tiktok-icon.svg"
+                alt="Видеохостинг коротких видео TikTok" class="social-icon">TikTok</a>
           </div>
         </div>
       </div>
