--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
       </section>
       <section class="feynman">
-        <h1 class="feynman__title">Метод <br>Феймана</h1>
+        <h1 class="feynman__title">Метод Феймана</h1>
         <h2 class="feynman__subtitle">Выучить и не забыть</h2>
         <a href="#" class="feynman__link">Подробнее &#8594</a>
         <img alt="Фейнман" src="./images/feynman.png" class="feynman__image">
