--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="page">
     <header class="header">
       <div class="header__flex-column">
-        <div class="logo--place_header"></div>
+        <div class="logo_place_header"></div>
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
           жизни? <a href="#" class="header__link">Узнать &#8594</a></p>
@@ -45,48 +45,48 @@
         </div>
       </section>
       <section class="digits">
-        <h1 class="section-title section-title--theme_white">Цифры и факты</h1>
+        <h1 class="section-title section-title_theme_white">Цифры и факты</h1>
         <h2 class="section-subtitle">Про учёбу и мозг</h2>
         <div class="table table_theme_white">
           <div class="table__row">
-            <div class="table__cell table__cell--theme_white">
+            <div class="table__cell table__cell_theme_white">
               <h3 class="table__heading">86 миллиардов</h3>
               <h4 class="table__text">Число нейронов в мозге человека</h4>
             </div>
-            <div class="table__cell table__cell--theme_white">
+            <div class="table__cell table__cell_theme_white">
               <h3 class="table__heading">2.1 миллиарда</h3>
               <h4 class="table__text">
                 <p>Число нуждающихся в повышении квалификации</p>
                 <p>Всемирный Банк, 2017</p>
               </h4>
             </div>
-            <div class="table__cell table__cell--theme_white">
+            <div class="table__cell table__cell_theme_white">
               <h3 class="table__heading">1000 терабайт</h3>
               <h4 class="table__text">Объём памяти человека</h4>
             </div>
-            <div class="table__cell table__cell--theme_white">
+            <div class="table__cell table__cell_theme_white">
               <h3 class="table__heading">500 триллионов</h3>
               <h4 class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека
               </h4>
             </div>
           </div>
           <div class="table__row">
-            <div class="table__cell table__cell--theme_white">
+            <div class="table__cell table__cell_theme_white">
               <h3 class="table__heading">420 миллионов</h3>
               <h4 class="table__text">
                 <p>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
                 <p>Всемирный Банк, 2017</p>
               </h4>
             </div>
-            <div class="table__cell table__cell--theme_white">
+            <div class="table__cell table__cell_theme_white">
               <h3 class="table__heading">17–20 лет</h3>
               <h4 class="table__text">Пик обучаемости</h4>
             </div>
-            <div class="table__cell table__cell--theme_white">
+            <div class="table__cell table__cell_theme_white">
               <h3 class="table__heading">1885 год</h3>
               <h4 class="table__text">Открытие кривой забывания</h4>
             </div>
-            <div class="table__cell table__cell--theme_white">
+            <div class="table__cell table__cell_theme_white">
               <h3 class="table__heading">1889 год</h3>
               <h4 class="table__text">Открытие условного рефлекса</h4>
             </div>
@@ -100,49 +100,49 @@
         <img alt="Фейнман" src="./images/feynman.png" class="feynman__image">
       </section>
       <section class="kaufman">
-        <h1 class="section-title section-title--theme_dark">Принципы обучения</h1>
-        <h2 class="section-subtitle section-subtitle--theme_dark">от Джоша Кауфмана</h2>
-        <div class="table table--theme_dark">
+        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
+        <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <div class="table table_theme_dark">
           <div class="table__row">
-            <div class="table__cell table__cell--theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <p class="table__heading">1</p>
               <p class="table__text">Выберите привлекательный проект.</p>
             </div>
-            <div class="table__cell table__cell--theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <p class="table__heading">2</p>
               <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
-            <div class="table__cell table__cell--theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <p class="table__heading">3</p>
               <p class="table__text">Определите целевой уровень мастерства.</p>
             </div>
-            <div class="table__cell table__cell--theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <p class="table__heading">4</p>
               <p class="table__text">Разбейте навык на элементы.</p>
             </div>
-            <div class="table__cell table__cell--theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <p class="table__heading">5</p>
               <p class="table__text">Приготовьте всё необходимое для занятий.</p>
             </div>
           </div>
           <div class="table__row">
-            <div class="table__cell table__cell--theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <p class="table__heading">6</p>
               <p class="table__text">Устраните препятствия для занятий.</p>
             </div>
-            <div class="table__cell table__cell--theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <p class="table__heading">7</p>
               <p class="table__text">Выделите специальное время для занятий.</p>
             </div>
-            <div class="table__cell table__cell--theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <p class="table__heading">8</p>
               <p class="table__text">Создайте быстрые петли обратной связи.</p>
             </div>
-            <div class="table__cell table__cell--theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <p class="table__heading">9</p>
               <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </div>
-            <div class="table__cell table__cell--theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <p class="table__heading">10</p>
               <p class="table__text">Уделяйте внимание количеству и скорости.</p>
             </div>
@@ -153,11 +153,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column--content_copyright">
-          <div class="logo logo--place_footer"></div>
+        <div class="footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
           <p class="footer__author">&#169 Виктор Абанькин</p>
         </div>
-        <div class="footer__column--content_info">
+        <div class="footer__column_content_info">
           <p class="footer__column-heading">О практикуме</p>
           <div class="footer__column-links flex_column">
             <a href="#" class="footer__column-link ">Главная</a>
@@ -165,9 +165,9 @@
             <a href="#" class="footer__column-link ">Наставники</a>
           </div>
         </div>
-        <div class="footer__column--content_social">
+        <div class="footer__column_content_social">
           <p class="footer__column-heading">Соцсети</p>
-          <div class="footer__column--links flex_column">
+          <div class="footer__column_links flex_column">
             <a href="#" class="footer__column-link"><img src=".\images\youtube-icon.svg" alt="Видеохостинг YouTube"
                 class="social-icon">YouTube</a>
             <a href="#" class="footer__column-link"><img src=".\images\vk_color_white.svg"
