--- a/index.html
+++ b/index.html
@@ -15,29 +15,30 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="header__flex-column">
-        <div class="logo_place_header"></div>
-        <h1 class="header__title">Научиться учиться</h1>
-        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-          жизни? <a href="#" class="header__link">Узнать &#8594</a></p>
+      <!-- <div class="header__flex-column"> -->
+      <div class="logo logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
+        жизни? <a href="#" class="header__link">Узнать &#8594;</a></p>
+      <!-- </div> -->
+      <!-- <div class="flex-column"> -->
+      <img src="./images/header-image.png" alt="Картина Опять двойка (1952г., художник.Ф.Решетников)"
+        class="header__main-illustration">
+      <div class="header__square-pic">
       </div>
-      <div class="flex-column">
-        <div class="header__main-illustration"></div>
-        <div class="header__square-pic"></div>
-      </div>
+      <!-- </div> -->
     </header>
     <main>
       <section class="description">
         <div class="two-columns">
-          <h5 class="two-columns__brief">Главные проблемы в обучении</h5>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
               материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше
               сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит
               пользы.</p>
-
-            <p class="two-columns__paragraph two-columns__paragraph_margin"><span
-                class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно
+              уметь, но
               почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
@@ -45,63 +46,63 @@
         </div>
       </section>
       <section class="digits">
-        <h1 class="section-title section-title_theme_white">Цифры и факты</h1>
-        <h2 class="section-subtitle">Про учёбу и мозг</h2>
-        <div class="table table_theme_white">
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <div class="table table">
           <div class="table__row">
-            <div class="table__cell table__cell_theme_white">
-              <h3 class="table__heading">86 миллиардов</h3>
-              <h4 class="table__text">Число нейронов в мозге человека</h4>
+            <div class="table__cell">
+              <h4 class="table__heading">86 миллиардов</h4>
+              <h5 class="table__text">Число нейронов в мозге человека</h5>
             </div>
-            <div class="table__cell table__cell_theme_white">
-              <h3 class="table__heading">2.1 миллиарда</h3>
-              <h4 class="table__text">
+            <div class="table__cell">
+              <h4 class="table__heading">2.1 миллиарда</h4>
+              <h5 class="table__text">
                 <p>Число нуждающихся в повышении квалификации</p>
                 <p>Всемирный Банк, 2017</p>
-              </h4>
+              </h5>
             </div>
-            <div class="table__cell table__cell_theme_white">
-              <h3 class="table__heading">1000 терабайт</h3>
-              <h4 class="table__text">Объём памяти человека</h4>
+            <div class="table__cell">
+              <h4 class="table__heading">1000 терабайт</h4>
+              <h5 class="table__text">Объём памяти человека</h5>
             </div>
-            <div class="table__cell table__cell_theme_white">
-              <h3 class="table__heading">500 триллионов</h3>
-              <h4 class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека
-              </h4>
+            <div class="table__cell">
+              <h4 class="table__heading">500 триллионов</h4>
+              <h5 class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека
+              </h5>
             </div>
           </div>
           <div class="table__row">
-            <div class="table__cell table__cell_theme_white">
-              <h3 class="table__heading">420 миллионов</h3>
-              <h4 class="table__text">
+            <div class="table__cell">
+              <h4 class="table__heading">420 миллионов</h4>
+              <h5 class="table__text">
                 <p>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
                 <p>Всемирный Банк, 2017</p>
-              </h4>
+              </h5>
             </div>
-            <div class="table__cell table__cell_theme_white">
-              <h3 class="table__heading">17–20 лет</h3>
-              <h4 class="table__text">Пик обучаемости</h4>
+            <div class="table__cell">
+              <h4 class="table__heading">17–20 лет</h4>
+              <h5 class="table__text">Пик обучаемости</h5>
             </div>
-            <div class="table__cell table__cell_theme_white">
-              <h3 class="table__heading">1885 год</h3>
-              <h4 class="table__text">Открытие кривой забывания</h4>
+            <div class="table__cell">
+              <h4 class="table__heading">1885 год</h4>
+              <h5 class="table__text">Открытие кривой забывания</h4>
             </div>
-            <div class="table__cell table__cell_theme_white">
-              <h3 class="table__heading">1889 год</h3>
-              <h4 class="table__text">Открытие условного рефлекса</h4>
+            <div class="table__cell">
+              <h4 class="table__heading">1889 год</h4>
+              <h5 class="table__text">Открытие условного рефлекса</h5>
             </div>
           </div>
         </div>
       </section>
       <section class="feynman">
-        <h1 class="feynman__title">Метод Феймана</h1>
-        <h2 class="feynman__subtitle">Выучить и не забыть</h2>
-        <a href="#" class="feynman__link">Подробнее &#8594</a>
+        <h2 class="feynman__title">Метод Феймана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
         <img alt="Фейнман" src="./images/feynman.png" class="feynman__image">
       </section>
       <section class="kaufman">
-        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
-        <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
         <div class="table table_theme_dark">
           <div class="table__row">
             <div class="table__cell table__cell_theme_dark">
@@ -155,7 +156,7 @@
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <p class="footer__author">&#169 Виктор Абанькин</p>
+          <p class="footer__author">&#169; Виктор Абанькин</p>
         </div>
         <div class="footer__column_content_info">
           <p class="footer__column-heading">О практикуме</p>
