--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="header__square-pic">
       </div>
     </header>
-    <main>
+    <main class="content">
       <section class="description">
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
