--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="description" content="Портфолио Перевалова А.С. на Яндекс.Практикуме">
   <meta name="keywords" content="HTML5, CSS, JS">
   <meta name="author" content="Антон Перевалов">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 
