--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="HTML5, CSS, JS">
   <meta name="author" content="Антон Перевалов">
   <link rel="stylesheet" href="./pages/index.css">
+  <link href="./images/logo-page.ico" rel="icon">
   <title>Научиться учиться</title>
 </head>
 
@@ -39,6 +40,9 @@
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+      <section class="techniques">
+
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
