--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни? <a href="#" class="header__link">Узнать &#8594;</a></p>
+        жизни? <a href="#" class="header__link all-links">Узнать &#8594;</a></p>
       <img src="./images/header-image.png" alt="Картина Опять двойка (1952г., художник.Ф.Решетников)"
         class="header__main-illustration">
-      <div class="header__square-pic">
+      <div class="header__square-pic rotation">
       </div>
     </header>
     <main class="content">
@@ -42,7 +42,68 @@
         </div>
       </section>
       <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img alt="Книга в белой обложке с черными буквами" src="./images/cards-attention.png" class="cards__image">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img alt="Античная статуя" src="./images/cards-recall.png" class="cards__image">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img alt="Люди прогуливаются по вантовому мосту" src="./images/cards-interliving.png" class="cards__image">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img alt="Белая квадратная комната, посередине стоит человек" src="./images/cards-question.png"
+              class="cards__image">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img alt="Стопка книг лежит на руке" src="./images/cards-competence.png" class="cards__image">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <div class="video__iframe">
+            <iframe id="ytplayer" type="text/html" width="515" height="316"
+              src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="video__iframe">
+            <iframe id="ytplayer" type="text/html" width="515" height="316"
+              src="https://www.youtube.com/embed/M7lc1UVf-VE" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </section>
+      <section class="oakley">
 
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Феймана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <img alt="Фейнман" src="./images/feynman.png" class="feynman__image">
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -86,11 +147,8 @@
 
         </div>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Феймана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a href="#" class="feynman__link">Подробнее &#8594;</a>
-        <img alt="Фейнман" src="./images/feynman.png" class="feynman__image">
+      <section class="khan">
+
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -138,6 +196,9 @@
           </div>
         </div>
         <div class="kaufman__image"></div>
+      </section>
+      <section class="resources">
+
       </section>
     </main>
     <footer class="footer">
