--- a/index.html
+++ b/index.html
@@ -86,19 +86,26 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <div class="video__iframe">
-            <iframe id="ytplayer" type="text/html" width="515" height="316"
-              src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+            <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
           </div>
           <div class="video__iframe">
-            <iframe id="ytplayer" type="text/html" width="515" height="316"
-              src="https://www.youtube.com/embed/M7lc1UVf-VE" frameborder="0" allowfullscreen></iframe>
+            <iframe width="515" height="316" src="https://www.youtube.com/embed/M7lc1UVf-VE" allowfullscreen></iframe>
           </div>
         </div>
       </section>
       <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
+              гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да
+              так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И
+              тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
+              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </div>
 
       </section>
-
       <section class="feynman">
         <h2 class="feynman__title">Метод Феймана</h2>
         <p class="feynman__subtitle">Выучить и не забыть</p>
@@ -148,6 +155,20 @@
         </div>
       </section>
       <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          </p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга Весь мир — школа, автор - Салман Хан ">
+            <a class="khan__buy-link all-links">Купить книгу &#8594;</a>
+          </div>
+        </div>
 
       </section>
       <section class="kaufman">
@@ -195,9 +216,22 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__image"></div>
+        <div class="kaufman__image rotation"></div>
       </section>
       <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас"
+              class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Логотип N+1"
+              class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Логотип Strelka"
+              class="resources__logo"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Логотип Полка"
+              class="resources__logo"></a>
+        </div>
+
 
       </section>
     </main>
