--- a/index.html
+++ b/index.html
@@ -44,54 +44,50 @@
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <div class="cards">
-          <div class="cards__item">
+        <ul class="cards">
+          <il class="cards__item">
             <img alt="Книга в белой обложке с черными буквами" src="./images/cards-attention.png" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.
             </p>
-          </div>
-          <div class="cards__item">
+          </il>
+          <il class="cards__item">
             <img alt="Античная статуя" src="./images/cards-recall.png" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
             </p>
-          </div>
-          <div class="cards__item">
+          </il>
+          <il class="cards__item">
             <img alt="Люди прогуливаются по вантовому мосту" src="./images/cards-interliving.png" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.
             </p>
-          </div>
-          <div class="cards__item">
+          </il>
+          <il class="cards__item">
             <img alt="Белая квадратная комната, посередине стоит человек" src="./images/cards-question.png"
               class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.
             </p>
-          </div>
-          <div class="cards__item">
+          </il>
+          <il class="cards__item">
             <img alt="Стопка книг лежит на руке" src="./images/cards-competence.png" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.
             </p>
-          </div>
-        </div>
+          </il>
+        </ul>
       </section>
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <div class="video__iframes">
-          <div class="video__iframe">
-            <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
-          </div>
-          <div class="video__iframe">
-            <iframe width="515" height="316" src="https://www.youtube.com/embed/M7lc1UVf-VE" allowfullscreen></iframe>
-          </div>
-        </div>
+        <ul class="video__iframes">
+          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/M7lc1UVf-VE" allowfullscreen class="video__iframe"></iframe>
+        </ul>
       </section>
       <section class="oakley">
         <div class="two-columns">
@@ -109,59 +105,59 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Феймана</h2>
         <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <a href="#" class="feynman__link all-links">Подробнее &#8594;</a>
         <img alt="Фейнман" src="./images/feynman.png" class="feynman__image">
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
-        <div class="table">
-          <div class="table__cell">
+        <ul class="table">
+          <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека
             </p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
-          </div>
-          <div class="table__cell">
+          </li>
+          <li class="table__cell">
             <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
-          </div>
-
-        </div>
+          </li>
+        </ul>
       </section>
       <section class="khan">
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по
+            всему
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
             смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
-          </p>
+          </blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -169,70 +165,67 @@
             <a class="khan__buy-link all-links">Купить книгу &#8594;</a>
           </div>
         </div>
-
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <div class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
+        <ul class="table">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">1</h3>
             <p class="table__text">Выберите привлекательный проект.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">2</h3>
             <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">3</h3>
             <p class="table__text">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">4</h3>
             <p class="table__text">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">5</h3>
             <p class="table__text">Приготовьте всё необходимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">6</h3>
             <p class="table__text">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">7</h3>
             <p class="table__text">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">8</h3>
             <p class="table__text">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">9</h3>
             <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">10</h3>
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
-          </div>
-        </div>
+          </li>
+        </ul>
         <div class="kaufman__image rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас"
+        <ul class="resources__logo-zone">
+          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-arzamas.svg"
+              alt="Логотип Арзамас" class="resources__logo"></a>
+          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-n1.svg" alt="Логотип N+1"
               class="resources__logo"></a>
-          <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Логотип N+1"
+          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-strelka.svg"
+              alt="Логотип Strelka" class="resources__logo"></a>
+          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-polka.svg" alt="Логотип Полка"
               class="resources__logo"></a>
-          <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Логотип Strelka"
-              class="resources__logo"></a>
-          <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Логотип Полка"
-              class="resources__logo"></a>
-        </div>
-
-
+        </ul>
       </section>
     </main>
     <footer class="footer">
