--- a/index.html
+++ b/index.html
@@ -44,49 +44,51 @@
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <ul class="cards">
-          <il class="cards__item">
+        <div class="cards">
+          <div class="cards__item">
             <img alt="Книга в белой обложке с черными буквами" src="./images/cards-attention.png" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.
             </p>
-          </il>
-          <il class="cards__item">
+          </div>
+          <div class="cards__item">
             <img alt="Античная статуя" src="./images/cards-recall.png" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
             </p>
-          </il>
-          <il class="cards__item">
+          </div>
+          <div class="cards__item">
             <img alt="Люди прогуливаются по вантовому мосту" src="./images/cards-interliving.png" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.
             </p>
-          </il>
-          <il class="cards__item">
+          </div>
+          <div class="cards__item">
             <img alt="Белая квадратная комната, посередине стоит человек" src="./images/cards-question.png"
               class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.
             </p>
-          </il>
-          <il class="cards__item">
+          </div>
+          <div class="cards__item">
             <img alt="Стопка книг лежит на руке" src="./images/cards-competence.png" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.
             </p>
-          </il>
-        </ul>
+          </div>
+        </div>
       </section>
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <ul class="video__iframes">
-          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__iframe"></iframe>
-          <iframe src="https://www.youtube.com/embed/M7lc1UVf-VE" allowfullscreen class="video__iframe"></iframe>
+          <li><iframe src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__iframe"></iframe>
+          </li>
+          <li><iframe src="https://www.youtube.com/embed/M7lc1UVf-VE" allowfullscreen class="video__iframe"></iframe>
+          </li>
         </ul>
       </section>
       <section class="oakley">
@@ -217,14 +219,18 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-arzamas.svg"
-              alt="Логотип Арзамас" class="resources__logo"></a>
-          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-n1.svg" alt="Логотип N+1"
-              class="resources__logo"></a>
-          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-strelka.svg"
-              alt="Логотип Strelka" class="resources__logo"></a>
-          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-polka.svg" alt="Логотип Полка"
-              class="resources__logo"></a>
+          <li><a href="#" class="resources__link all-links"><img src="./images/logo/resources-arzamas.svg"
+                alt="Логотип Арзамас" class="resources__logo"></a>
+          </li>
+          <li><a href="#" class="resources__link all-links"><img src="./images/logo/resources-n1.svg" alt="Логотип N+1"
+                class="resources__logo"></a>
+          </li>
+          <li><a href="#" class="resources__link all-links"><img src="./images/logo/resources-strelka.svg"
+                alt="Логотип Strelka" class="resources__logo"></a>
+          </li>
+          <li><a href="#" class="resources__link all-links"><img src="./images/logo/resources-polka.svg"
+                alt="Логотип Полка" class="resources__logo"></a>
+          </li>
         </ul>
       </section>
     </main>
