--- a/index.html
+++ b/index.html
@@ -84,15 +84,14 @@
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <ul class="video__iframes">
-          <li><iframe src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__iframe"></iframe>
-          </li>
-          <li><iframe src="https://www.youtube.com/embed/M7lc1UVf-VE" allowfullscreen class="video__iframe"></iframe>
-          </li>
-        </ul>
+        <div class="video__iframes">
+          <!-- так и не смог придумать как использовать список, но что бы был отступ только между видио -->
+          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/M7lc1UVf-VE" allowfullscreen class="video__iframe"></iframe>
+        </div>
       </section>
       <section class="oakley">
-        <div class="two-columns">
+        <div class="two-columns two-columns_place_oakle">
           <h2 class="two-columns__brief">История Барбары Оакли</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
@@ -218,20 +217,17 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <ul class="resources__logo-zone">
-          <li><a href="#" class="resources__link all-links"><img src="./images/logo/resources-arzamas.svg"
-                alt="Логотип Арзамас" class="resources__logo"></a>
-          </li>
-          <li><a href="#" class="resources__link all-links"><img src="./images/logo/resources-n1.svg" alt="Логотип N+1"
-                class="resources__logo"></a>
-          </li>
-          <li><a href="#" class="resources__link all-links"><img src="./images/logo/resources-strelka.svg"
-                alt="Логотип Strelka" class="resources__logo"></a>
-          </li>
-          <li><a href="#" class="resources__link all-links"><img src="./images/logo/resources-polka.svg"
-                alt="Логотип Полка" class="resources__logo"></a>
-          </li>
-        </ul>
+        <div class="resources__logo-zone">
+          <!-- как оформить список по БЭМ, если можно использовать классы только из брифа? ну ни как не получается слово вечность из букв "п ж о а" --!/ -->
+          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-arzamas.svg"
+              alt="Логотип Арзамас" class="resources__logo"></a>
+          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-n1.svg" alt="Логотип N+1"
+              class="resources__logo"></a>
+          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-strelka.svg"
+              alt="Логотип Strelka" class="resources__logo"></a>
+          <a href="#" class="resources__link all-links"><img src="./images/logo/resources-polka.svg" alt="Логотип Полка"
+              class="resources__logo"></a>
+        </div>
       </section>
     </main>
     <footer class="footer">
